--- a/src/pages/UIKit/colorsAndType/colorsAndType.scss
+++ b/src/pages/UIKit/colorsAndType/colorsAndType.scss
@@ -2,6 +2,7 @@
 @import "../../../assets/scss/vars";
 @import "../../../components/color-item/color-item";
 @import "../../../components/type-item/type-item";
+@import "../../../components/logo/logo.scss";
 
 .page {
     max-width: 1440px;
