--- a/src/assets/scss/fonts.scss
+++ b/src/assets/scss/fonts.scss
@@ -2,20 +2,28 @@
     font-family: "Conv_Quicksand-Bold";
 	  src: url('/assets/fonts/Quicksand/Bold/Quicksand-Bold.woff') format('woff');
 	  src: url('/assets/fonts/Quicksand/Bold/Quicksand-Bold.ttf') format('truetype'), url('/assets/fonts/Quicksand/Bold/Quicksand-Bold.svg') format('svg');
+	  font-weight: normal;
+	  font-style: normal;
 }
 
 @font-face {
     font-family: 'Conv_Quicksand-Medium';
 	  src: url('/assets/fonts/Quicksand/Medium/Quicksand-Medium.woff') format('woff');src: url('/assets/fonts/Quicksand/Medium/Quicksand-Medium.ttf') format('truetype'),  url('/assets/fonts/Quicksand/Medium/Quicksand-Medium.svg') format('svg');
+	  font-weight: normal;
+	  font-style: normal;
 }
 
 @font-face {
     font-family: 'Conv_Montserrat-Bold';
 	  src: url('/assets/fonts/Montserrat/Bold/Montserrat-Bold.woff') format('woff'); src: url('/assets/fonts/Montserrat/Bold/Montserrat-Bold.ttf') format('truetype'), url('/assets/fonts/Montserrat/Bold/Montserrat-Bold.svg') format('svg');
+	  font-weight: normal;
+	  font-style: normal;
 }
 
 @font-face {
     font-family: 'Conv_Montserrat-Regular';
 	  src: url('/assets/fonts/Montserrat/Regular/Montserrat-Regular.woff') format('woff');
 	  src: url('/assets/fonts/Montserrat/Regular/Montserrat-Regular.ttf') format('truetype'), url('/assets/fonts/Montserrat/Regular/Montserrat-Regular.svg') format('svg');
+	  font-weight: normal;
+	  font-style: normal;
 }
