--- a/src/assets/scss/vars.scss
+++ b/src/assets/scss/vars.scss
@@ -7,11 +7,11 @@ $mainFont: 'Conv_Montserrat-Regular', sans-serif;
 
 $darkShadeBase: #1F2041;
 
-$darkShade100: $darkShadeBase;
-$darkShade75: rgba($darkShadeBase, 0.75);
-$darkShade50: rgba($darkShadeBase, 0.5);
-$darkShade25: rgba($darkShadeBase, 0.25);
-$darkShade5: rgba($darkShadeBase, 0.05);
+$darkShade100: $darkShadeBase;              //#1F2041
+$darkShade75: rgba($darkShadeBase, 0.75);   //rgba(31,32,65,.75);
+$darkShade50: rgba($darkShadeBase, 0.5);    //rgba(31,32,65,.5);
+$darkShade25: rgba($darkShadeBase, 0.25);   //rgba(31,32,65,.25);
+$darkShade5: rgba($darkShadeBase, 0.05);    //rgba(31,32,65,.05);
 
 $buttonColor: #BC9CFF;
 
