add class with margin for different page

--- a/src/components/logo/logo.scss
+++ b/src/components/logo/logo.scss
@@ -1,5 +1,13 @@
 .logo {
-    &_margin {
+
+    &_margin{
+
+        &-colors-and-type {
         margin: 40px 0 0 30px;
+        }
+
+        &-form-elements {
+            margin: 32px 0 0 30px;  
+        }
     }
 }
