--- a/src/pages/UIKit/colorsAndType/colorsAndType.scss
+++ b/src/pages/UIKit/colorsAndType/colorsAndType.scss
@@ -1,23 +1,7 @@
-@import "../../../assets/scss/reset.scss";
-@import "../../../assets/scss/vars";
+@import "../../../assets/scss/global";
 @import "../../../components/color-item/color-item";
 @import "../../../components/type-item/type-item";
 @import "../../../components/logo/logo";
-
-.page {
-    max-width: 1440px;
-    margin: 0 auto;
-}
-
-.container {
-    max-width: 1160px;
-    margin: 0 auto;
-
-    &_grid {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-    }
-}
 
 .colors-wrap {
     padding: 67px 0 0 11px;
