rename some classes

--- a/src/pages/UIKit/colorsAndType/colorsAndType.pug
+++ b/src/pages/UIKit/colorsAndType/colorsAndType.pug
@@ -7,10 +7,10 @@ block variables
 
 block content
   .page
-    .logo.logo_margin
+    .logo.logo_margin-colors-and-type
       include ../../../components/logo/logo
       +logo('#1F2041', '#1F2041', '#1F2041', 0.25)
-    .container.container_grid
+    .container.container_grid-2-columns
       section.colors-wrap
         include ../../../components/color-item/color-item
         +color-item('Dark Shade 100%', '#1F2041')
