add state to text-field

--- a/src/pages/UIKit/formElements/formElements.pug
+++ b/src/pages/UIKit/formElements/formElements.pug
@@ -14,7 +14,7 @@ block content
       section        
         include ../../../components/text-field/text-field
         +text-field('text field', 'default', 'Email', '65')
-        +text-field('text field', 'Hover / Focus', 'This is pretty awesome', '18', ':focus')
+        +text-field('text field', 'Hover / Focus', 'This is pretty awesome', '18', 'active')
       section
 
       section
