--- a/src/pages/UIKit/formElements/formElements.scss
+++ b/src/pages/UIKit/formElements/formElements.scss
@@ -1,3 +1,4 @@
 @import "../../../assets/scss/global";
 @import "../../../components/logo/logo";
 @import "../../../components/text-field/text-field";
+@import "../../../components/dropdown/dropdown";
